--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <p class ="lead">We are the premier online gaming community spanning across games and platforms. We provide the best platform for gamers like you to network, play, and maximize your gaming experience.</p>
         <br>
         <p class="registerbutton">
-        <a href="register" class="btn btn-primary btn-large" rollapp-href="register.html">Register</a> </p>
+        <a href="register.html" class="btn btn-primary btn-large" >Register</a> </p>
       </div>
     </div>
     <div class="item">
@@ -85,14 +85,15 @@
         <div class="carousel-caption">
             <h1>News<h1>
             <br>
-            <p class="lead"><h3>11/14/15 Update:</h3>
+            <p class="lead"><h3>11/18/15 Update:</h3>
               <br><br>
-              <li>Updated Carousel</li>
-              <li>Planning updates</li>
-              Questions? Shoot me an email at <a href="mailto:patrick.moonglaive.com">patrick.moonglaive.com</a>
+              <li>Added profile creator in Backbone.js</li>
+              <li><a href="profile/starcraft/profile.html" class ="btn btn-warning btn-large">Click here to see profile creator</a> </li>
+              <li></li>
+              Questions? Shoot me an email at <a href="mailto:patrick@moonglaive.com">patrick@moonglaive.com</a>
               </p>
             <p class="registerbutton">
-            <a href="news" class="btn btn-primary btn-large" rollapp-href="news.html">Read More News and Updates</a></p>
+            <a href="news.html" class="btn btn-primary btn-large">Read More News and Updates</a></p>
         </div>
     </div>
     <div class="item">
